force-app/main/default/objects/Lead/fields/Consent_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Consent_Marketing__c</fullName>
    <label>Marketing Consent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>