force-app/main/default/objects/Lead/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <label>Existing Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>