force-app/main/default/objects/Lead/fields/Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Size__c</fullName>
    <label>Family Size</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>