force-app/main/default/objects/Lead/fields/Interested_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Interested_Insurance__c</fullName>
    <label>Interested Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(HFLTR001) HF Jeevan Suraksha</fullName><default>false</default><label>(HFLTR001) HF Jeevan Suraksha</label></value>
            <value><fullName>(HFHTR002) HF Arogya Suraksha</fullName><default>false</default><label>(HFHTR002) HF Arogya Suraksha</label></value>
            <value><fullName>(HFLEN003) HF Jeevan Samriddhi</fullName><default>false</default><label>(HFLEN003) HF Jeevan Samriddhi</label></value>
            <value><fullName>(HFLCP004) HF Bal Labh</fullName><default>false</default><label>(HFLCP004) HF Bal Labh</label></value>
            <value><fullName>(HFLUL005) HF Nivesh Jeevan</fullName><default>false</default><label>(HFLUL005) HF Nivesh Jeevan</label></value>
            <value><fullName>(HFHEN006) HF Jeevan Labh</fullName><default>false</default><label>(HFHEN006) HF Jeevan Labh</label></value>
            <value><fullName>(HFLCP007) HF Bal Jeevan Umang</fullName><default>false</default><label>(HFLCP007) HF Bal Jeevan Umang</label></value>
            <value><fullName>(HFLUL008) HF Index Plus</fullName><default>false</default><label>(HFLUL008) HF Index Plus</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>