force-app/main/default/objects/Lead/fields/Interested_Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Interested_Premium_Type__c</fullName>
    <label>Interested Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Regular Premium</fullName><default>false</default><label>Regular Premium</label></value>
            <value><fullName>Single Premium</fullName><default>false</default><label>Single Premium</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>