force-app/main/default/objects/Lead/fields/Preferred_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Channel__c</fullName>
    <label>Preferred Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>